[package]
name = "day04"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fileutils = {path = "../fileutils"}
regexutils = {path = "../regexutils"}
regex = "1.4.2"
lazy_static = "1.4.0"
