[package]
name = "day06"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fileutils = {path = "../fileutils"}
boolinator = "2.4.0"