[package]
name = "day07"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
lazy_static = "1.4.0"
regexutils = {path = "../regexutils"}
regex = "1.4.2"
itertools = "0.9.0"
