[package]
name = "day08"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regexutils = {path = "../regexutils"}
itertools = "0.9.0"
fileutils = {path = "../fileutils"}
aocompute = {path = "../aocompute"}
